Fix sidebar layout overflow

--- a/ui/apps/platform/src/Containers/NetworkGraph/NetworkGraphPage.css
+++ b/ui/apps/platform/src/Containers/NetworkGraph/NetworkGraphPage.css
@@ -5,10 +5,15 @@
     --pf-c-page__main-section--PaddingRight: 0;
 }
 
-.pf-topology-resizable-side-bar {
-    /* we use the page header min height thrice to account for: nav header + page header + secondary header */
-    /* @TODO: Consider a more future-proof way of doing this. See https://github.com/stackrox/stackrox/pull/3703#discussion_r1014292340 */
-    height: calc(100vh - (var(--pf-c-page__header--MinHeight) * 3));
+/* Prevent the network graph from overflowing the parent flex container */
+.network-graph {
+    min-height: 0;
+    flex-shrink: 1;
+}
+
+/* Prevent the network graph from overflowing the parent flex container */
+.pf-topology-container {
+    min-height: 0;
 }
 
 /* simple solution to prevent user from making sidebar too narrow */
